# mglet-base

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  fortitude.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  lint.yml  tum_build.yml  tum_lint.yml
ci/: lint-fortran.py  mglet-valgrind.supp  run-test.sh
cmake/: CMakeLists.txt  Subdirlist.cmake  TestAbstractInterface.cmake  TestBindingC.cmake  TestDataPtrC.cmake  TestElemental.cmake  TestFortran2018Capability.cmake  TestFunctionPtrC.cmake  TestQsort.cmake  TestSelectRank.cmake  test_qsort.c
docs/: offloading.md
src/: CMakeLists.txt  mglet.F90  runinfo_mod.F90  timeloop_mod.F90
src/backends/: CMakeLists.txt  gpu_backend_marker_api.h  gpu_backend_runtime_api.h  gpuruntime_mod.F90  profilemarker_mod.F90
src/backends/cuda/: gpu_backend_cuda_marker.cxx  gpu_backend_cuda_runtime.cxx  gpu_backend_cuda_tools.h
src/backends/hip/: gpu_backend_hip_marker.cxx  gpu_backend_hip_runtime.cxx  gpu_backend_hip_tools.h
src/backends/none/: gpu_backend_none_marker.cxx  gpu_backend_none_runtime.cxx
src/core/: CMakeLists.txt  bound_mod.F90  buildinfo_mod.F90  charfunc_mod.F90  checksum_mod.F90  commbuf_mod.F90  comms_mod.F90  config_mod.F90  connect2_mod.F90  core_mod.F90  corefields_mod.F90  create_directory.c  dlopen_mod.F90  envvars_mod.F90  err_mod.F90  expression_mod.F90  exprtk_wrapper.cxx  exprtk_wrapper.h  field_mod.F90  fieldhelper_mod.F90  fieldio2_mod.F90  fieldpool_mod.F90  fields_mod.F90  fort7_mod.F90  get_grid_mod.F90  getrusage_wrapper.c  gridio_mod.F90  grids_mod.F90  hdf5common_mod.F90  jsoncpp_wrapper.cxx  jsoncpp_wrapper.h  mglet_precision.h  mgletmath_mod.F90  offload_mod.F90  omprt_wrapper.c  omprt_wrapper.h  plugins_mod.F90  pointers_mod.F90  precision_mod.F90  probeoffload_mod.F90  (+21 more)
src/core/connect/: connect2_mod.F90  connect_core_mod.F90
src/core/field_t/: basefield_mod.F90  field_mod.F90  fieldmapper_mod.F90  intfield_mod.F90  realfield_mod.F90
src/flow/: .nfs0000000900419ba0000061bf  CMakeLists.txt  bound_flow_mod.F90  boussinesqterm_mod.F90  coriolisterm_mod.F90  flow_mod.F90  flowcore_mod.F90  flowstat_mod.F90  gc_compbodyforce_mod.F90  gc_flowstencils_mod.F90  hyperplane_mod.F90  itinfo_mod.F90  laplacephi_mod.F90  lesmodel_mod.F90  plog_mod.F90  pressuresolver_mod.F90  setboundarybuffers_mod.F90  sip_classic_mod.F90  sip_hyperplane_mod.F90  sip_inlined.F90  sor_mod.F90  timeintegration_mod.F90  tstle4_mod.F90  wernerwengle_mod.F90
src/ib/: CMakeLists.txt  blockbp_mod.F90  blockcheck_mod.F90  blockclosetoboundary_mod.F90  blockluecken_mod.F90  blocknodes_mod.F90  bubvbw_mod.F90  calcauavaw_mod.F90  calcfacearea_mod.F90  calcnormals_mod.F90  checkblock_mod.F90  checkzelle_mod.F90  ctof_mod.F90  cutcorner_mod.F90  fillfollower_mod.F90  filling_mod.F90  findinterface_mod.F90  flzelle_mod.F90  freekante_mod.F90  freepressure_mod.F90  ftoc_mod.F90  gc_blockbp_mod.F90  gc_blockbpfeld_mod.F90  gc_blockface_mod.F90  gc_createstencils_mod.F90  gc_finishknotenbzelltyp_mod.F90  gc_mod.F90  gc_restrict_mod.F90  gc_stencils_mod.F90  gc_totwasser_mod.F90  gc_zelltyp_mod.F90  ib_mod.F90  ibconst_mod.F90  ibcore_mod.F90  ibmodel_mod.F90  knotenundkanten_mod.F90  noib_mod.F90  noib_restrict_mod.F90  openbubvbw_mod.F90  par_ftoc_mod.F90  (+4 more)
src/plugins/: CMakeLists.txt  builtin_plugins_mod.F90  derivfields_mod.F90  probes_mod.F90  snapshots_mod.F90  uvwbulk_mod.F90
src/scalar/: CMakeLists.txt  blockbt_mod.F90  bound_scalar_mod.F90  gc_scastencils_mod.F90  itinfo_scalar_mod.F90  scacore_mod.F90  scalar_mod.F90  scastat_mod.F90  setboundarybuffers_scalar_mod.F90  timeintegrate_scalar_mod.F90
tests/: CMakeLists.txt
tests/BlasiusBL/: add-expression.py  expression.txt  grids.h5  parameters.json  run.sh
tests/Checkblock/: box.stl  grids.h5  parameters-checkblock.json  parameters-newblock.json  run.sh
tests/GeostrophicWind/: check.py  grids.h5  ib_stencils.h5  parameters.json  run.sh
tests/HotAndColdSpheres/: cold.stl  grids.h5  hot.stl  parameters.json  run.sh
tests/Inflow-ramp/: grids.h5  parameters-ramp.json  parameters-ramp_inf.json  plot.py  run.sh
tests/NaturalConvection/: grids.h5  parameters.json
tests/Parker_micro/: grids.h5  inlet.stl  kanal.stl  klappe.stl  parameters-blocking.json  parameters-run.json  parameters.json  run.sh
tests/Santarelli/: grids.h5  parameters-flow.json  parameters-scalar.json  parameters.json  run.sh  sphere.stl
tests/ScalarDecay/: grids.h5  parameters-0.json  run-all.py  run.sh
tests/Statistics/: grids.h5  parameters.json
tests/TaylorGreen/: grids.h5  parameters.json
tests/Taylorvortex_2D/: grids.h5  parameters.json  run.sh
tests/sphere/: grids.h5  parameters-1.json  parameters-2.json  parameters.json  run.sh  sphere.stl
